# simple-screen-share

./: .gitmodules  README.md
client/: .babelrc  .env.defaults  package.json  tsconfig.json  webpack.config.ts
client/src/: env.ts  main.ts
client/src/backend/: axios.ts
client/src/backend/rtp-connection/: index.ts  rtc.ts  sdp.ts  signaling.ts
client/src/bootstrap/: loading.tsx  main.ts
client/src/state/: auth.ts  index.ts
client/src/utils/: ee2.ts  error.ts  observable.ts
client/src/utils/virtual-camera/: index.ts  renderer-clock.ts  renderer-snow-simplex.ts  renderer-snow.ts  renderer.ts
client/src/view/: index.tsx
client/src/view/components/authentification/: index.tsx
client/src/view/hooks/: auth.ts  force-render.ts  observable.ts
client/src/view/pages/: index.tsx
client/src/view/pages/room/: index.tsx
server/: Cargo.toml
server/src/: lib.rs
server/src/rest_controller/: auth.rs  mod.rs
server/src/rest_controller/routes/: auth.rs  mod.rs  room.rs
server/src/rtp_server/: client.rs  client_rtp.rs  messages.rs  mod.rs  room.rs  server.rs
