[package]
name = "simple-screen-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-stream = "0.3.3"
chrono = "0.4.22"
console-subscriber = "0.1.8"
env_logger = "0.9.0"
futures = "0.3.24"
jsonwebtoken = "8.1.1"
log = "0.4.17"
mongodb = "2.3.0"
num-traits = "0.2.15"
parking_lot = "0.12.1"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" } # FIXME: Add a commit
serde = { version = "1.0.143", features = ["serde_derive"] }
serde_derive = "1.0.143"
serde_json = "1.0.83"
tokio-stream = "0.1.9"
tokio-tungstenite = "0.17.2"
tungstenite = "0.17.3"
typescript-type-def = { version = "0.5.4", features = ["serde_json"] }
webrtc = "0.5.0"
#webrtc = { path = 'third_party/webrtc/webrtc' }